# descartes

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  TODOs.md  TODOs.txt  create_vs_project.bat
CMake/: glancyCompilerOptions.cmake  libraryAdditionLemma.cmake
Source/: CMakeLists.txt  axes_aligned_bounding_box.hpp  bounding_volume_hierarchy.hpp  camera.h  camera.hpp  constants.h  constants.hpp  dielectric.h  dielectric.hpp  hitable.h  hitable_list.h  hitable_list.hpp  image.h  lambertian.h  main.cpp  material.h  metal.h  metal.hpp  rand_engine.h  rand_engine.hpp  random_spheres_scene.h  random_spheres_scene.hpp  ray.h  ray.hpp  renderer.h  renderer.hpp  scene.h  scene.hpp  sphere.h  sphere.hpp  two_spheres_scene.h  utilities.h  utilities.hpp  vec3.h  vec3.hpp
glancy/: CMakeLists.txt
glancy/src/: main.cpp
hitables/: CMakeLists.txt
hitables/include/: axes_aligned_bounding_box.hpp  bounding_volume_hierarchy.hpp  hitable.hpp  hitable_list.hpp  sphere.hpp
hitables/src/: axes_aligned_bounding_box.hpp  bounding_volume_hierarchy.hpp
hitables/test/: CMakeLists.txt  aabb_test.cpp
hitables/test/include/: aabb_test.hpp
hitables/test/src/: aabb_test.cpp
hittables/: CMakeLists.txt
hittables/include/: axes_aligned_bounding_box.hpp  bounding_volume_hierarchy.hpp  hittable.hpp  hittable_list.hpp  sphere.hpp
hittables/test/: CMakeLists.txt
main/: CMakeLists.txt
materials/: CMakeLists.txt
materials/include/: dielectric.hpp  lambertian.hpp  material.hpp  metal.hpp
materials/src/: material.hpp  metal.hpp
math/: CMakeLists.txt
math/include/: ray.hpp  vec3.hpp  vec3Carray.hpp  vec3rawnums.hpp
math/src/: math.cpp  ray.hpp  vec3.hpp
math/test/: CMakeLists.txt  math_test.cpp  ray_test.cpp  vec3_test.cpp
math/test/include/: ray_test.hpp  vec3_test.hpp
math/test/src/: ray_test.cpp  vec3_test.cpp
renderer/: CMakeLists.txt
renderer/include/: camera.hpp  image.hpp  renderer.hpp
scenes/: CMakeLists.txt
scenes/include/: different_dielectrics_scene.hpp  random_spheres_scene.hpp  scene.hpp  two_spheres_scene.hpp
scenes/src/: different_dielectrics_scene.hpp
src/: CMakeLists.txt  axes_aligned_bounding_box.hpp  bounding_volume_hierarchy.hpp  camera.hpp  chronometer.hpp  constants.hpp  dielectric.hpp  hitable.hpp  hitable_list.hpp  lambertian.hpp  main.cpp  rand_engine.hpp  random_spheres_scene.hpp  ray.hpp  renderer.hpp  sphere.hpp  two_spheres_scene.hpp  utilities.hpp  vec3.hpp
test/: ApproxContainer.hpp  CMakeLists.txt  aabb_test.cpp  aabb_test.hpp  container_approx.hpp  main_test.cpp  ray_test.cpp  ray_test.hpp  testing_constants.hpp  vec3_test.cpp  vec3_test.hpp
testing_utilities/: CMakeLists.txt
testing_utilities/include/: aabb_random_generator.hpp  container_approx.hpp  ray_random_generator.hpp  testing_constants.hpp  vec3_random_generator.hpp
testing_utilities/src/: testing_utilities.cpp
textures/: CMakeLists.txt
textures/include/: checker_texture.hpp  constant_texture.hpp  texture.hpp
utilities/: CMakeLists.txt
utilities/include/: chronometer.hpp  constants.hpp  rand_engine.hpp  types.hpp  utilities.hpp
utilities/src/: chronometer.hpp  container_approx.hpp  utilities.cpp  utilities.hpp
